--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
+cmake>=3.22
+dlib==19.22.1
+face_recognition==1.3.0
+opencv-python-headless==4.5.5.64
+numpy
 fastapi
 uvicorn
-numpy
-opencv-python-headless
-face_recognition
 python-multipart
+
