--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 cmake>=3.22
 dlib==19.22.1
-face_recognition==1.3.0
-opencv-python-headless==4.5.5.64
+numpy==1.23.5
+opencv-python==4.7.0.72
 numpy
 fastapi
 uvicorn
